cleaner string. readme

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 # What is this abomination?
 Its encryption BEFORE HTTP/HTTPS using a PSK. Useful for a scenario when a man in the middle is expected and cannot be avoided (IronPort).
+
+# What do I trust?
+The proxy and the proxy end point. Trust here is required.
